# deep-research-agent

./: .env  .gitignore  .pre-commit-config.yaml  AGENT_CREATION_GUIDE.md  Dockerfile  GITHUB_ACTIONS_DEPLOYMENT.md  README.md  lambda_function.py  lambda_test_events.json  pyproject.toml  requirements.txt  requirements_deep.txt
.github/workflows/: deploy-lambda.yml
deep_research_agent/: agent_factory.py  main.py  orchestrator.py  prompt_service.py  schemas.py
deep_research_agent/agents/: base_agent.py
deep_research_agent/agents/evaluation/: ethical_guardian_agent.py  evaluation_coordinator_agent.py  market_viability_agent.py  prompts.py  ranking_agent.py  technical_feasibility_agent.py
deep_research_agent/agents/ideation/: devils_advocate_agent.py  ideation_agent.py  prompts.py
deep_research_agent/agents/query_enrichment/: clarifier_agent.py  conversation_summarizer_agent.py  document_summarizer_agent.py  prompts.py  query_enhancer_agent.py  query_understanding_agent.py
deep_research_agent/agents/reporting/: citation_report_generator_agent.py  prompts.py  report_synthesizer_agent.py
deep_research_agent/agents/research/: business_analysis_agent.py  domain_search_agent.py  generic_search_agent.py  parallel_research_agent.py  prompts.py  search_summarizer_agent.py  tools.py  trend_spotter_agent.py  user_persona_agent.py
deep_research_agent/api/: conversation_manager.py  main.py  runner.py
deep_research_agent/common/: config.py  handlers.py  schemas.py
deep_research_agent/core/: agent_factory.py  agent_registry.py  orchestrator.py  workflow.py
deep_research_agent/services/: prompt_service.py
deep_research_agent/utils/: logger.py
