[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strands-agents-builder>=0.1.4",
    "strands-agents-tools>=0.1.7",
    "boto3",
    "botocore",
    "python-dotenv",
    "pydantic-settings",
    "duckduckgo-search>=5.3.1b1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "ruff>=0.5.0",
]

[tool.setuptools]
packages = ["deep_research_agent"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.uv.sources]
deep-research-agent = { path = "." }

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
