[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strands-agents-builder>=0.1.4",
    "strands-agents-tools>=0.1.7",
    "boto3",
    "botocore",
    "python-dotenv",
    "pydantic-settings",
    "duckduckgo-search>=5.3.1b1",
]

[project.scripts]
start = "deep_research_agent.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "ruff>=0.5.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-env>=1.1.0",
    "pytest-xdist>=3.5.0",
    "moto[boto3]>=4.2.0",
    "responses>=0.24.0",
    "freezegun>=1.4.0",
]

[tool.setuptools]
packages = ["deep_research_agent"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.uv.sources]
deep-research-agent = { path = "." }

[tool.uv]
package = true

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=deep_research_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "aws: Tests that require AWS credentials",
]
env = [
    "AWS_REGION=us-east-1",
    "DEFAULT_MODEL_ID=test-model",
    "BOTO_CONNECT_TIMEOUT=10",
    "BOTO_READ_TIMEOUT=10",
]
asyncio_mode = "auto"
