[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strands-agents-builder>=0.1.4",
    "strands-agents-tools>=0.1.7",
    "boto3",
    "botocore",
    "python-dotenv",
    "pydantic-settings",
    "requests>=2.31.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "reportlab>=4.0.0",
    "xhtml2pdf>=0.2.11",
    "weasyprint>=60.0",
]

[project.scripts]
start = "deep_research_agent.main:main"
start-api = "deep_research_agent.api.runner:start"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "ruff>=0.5.0",
]
api = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "mangum>=0.18.0",
]

[tool.setuptools]
packages = ["deep_research_agent"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.uv.sources]
deep-research-agent = { path = "." }

[tool.uv]
package = true

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B904",
    "F401",
    "F841",
    "E722"

]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=deep_research_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "aws: Tests that require AWS credentials",
]
env = [
    "AWS_REGION=us-east-1",
    "DEFAULT_MODEL_ID=test-model",
    "BOTO_CONNECT_TIMEOUT=10",
    "BOTO_READ_TIMEOUT=10",
]
asyncio_mode = "auto"
